--- a/flask/flaskr-tdd/templates/index.html
+++ b/flask/flaskr-tdd/templates/index.html
@@ -20,7 +20,10 @@
     </div>
     {% for message in get_flashed_messages() %}
     <div class="flash">{{ message }}</div>
-    {% endfor %} {% block body %}{% endblock %} {% if session.logged_in %}
+    {% endfor %}
+    {% block body %}{% endblock %}
+    
+    {% if session.logged_in %}
     <form action="{{ url_for('add_entry') }}" method="post" class="add-entry">
       <dl>
         <dt>Title:</dt>
@@ -33,15 +36,18 @@
     {% endif %}
     <ul class="entries">
       {% for entry in entries %}
-      <li>
-        <h2>{{ entry.title }}</h2>{{ entry.text|safe }}</li>
+      <li class="entry">
+        <h2 id="{{ entry.id }}">{{ entry.title }}</h2>{{ entry.text|safe }}</li>
       {% else %}
       <li><em>No entries yet. Add some!</em></li>
       {% endfor %}
     </ul>
 
   </div>
-
+  
+  <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='main.js') }}"></script>
 </body>
 
 </html>
