--- a/flask/flaskr-tdd/templates/index.html
+++ b/flask/flaskr-tdd/templates/index.html
@@ -3,14 +3,15 @@
 
 <head>
   <title>Flaskr</title>
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 </head>
 
 <body>
 
-  <div class="page">
+  <div class="container">
 
     <h1>Flaskr-TDD</h1>
+    
     <div class="metanav">
       {% if not session.logged_in %}
         <a href="{{ url_for('login') }}">log in</a>
@@ -18,9 +19,11 @@
         <a href="{{ url_for('logout') }}">log out</a>
       {% endif %}
     </div>
+    
     {% for message in get_flashed_messages() %}
     <div class="flash">{{ message }}</div>
     {% endfor %}
+    
     {% block body %}{% endblock %}
     
     {% if session.logged_in %}
@@ -30,10 +33,11 @@
         <dd><input type="text" size="30" name="title"></dd>
         <dt>Text:</dt>
         <dd><textarea name="text" rows="5" cols="40"></textarea></dd>
-        <dd><input type="submit" value="Share"></dd>
+        <dd><input type="submit" class="btn btn-default" value="Share"></dd>
       </dl>
     </form>
     {% endif %}
+
     <ul class="entries">
       {% for entry in entries %}
       <li class="entry">
