--- a/flask/flaskr-tdd/templates/login.html
+++ b/flask/flaskr-tdd/templates/login.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>Flaskr-TDD | Login</title>
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 </head>
 <body>
 
-  <div class="page">
+  <div class="container">
 
     <h1>Flaskr</h1>
 
@@ -36,7 +36,7 @@
         <dd><input type="text" name="username"></dd>
         <dt>Password:</dt>
         <dd><input type="password" name="password"></dd>
-        <dd><input type="submit" value="Login"></dd>
+        <dd><input type="submit" class="btn btn-default" value="Login"></dd>
       </dl>
     </form>
 
